--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Integration tests
       run: yarn test:e2e
     - name: Publish Test Results
-      if: always()
+      if: success() || failure()
       uses: EnricoMi/publish-unit-test-result-action@v2
       with:
         files: 'reports/**/*.xml'
