--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,12 @@ jobs:
       with:
         files: 'reports/**/*.xml'
         check_name: Test Results
+    - name: Extract version
+      id: version
+      run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+    - name: Create git tag
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git tag -a v${{ steps.version.outputs.VERSION }} -m "Release version ${{ steps.version.outputs.VERSION }}"
+        git push origin v${{ steps.version.outputs.VERSION }}
