--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,11 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version number for the release'
+        required: true
+        type: string
   
 permissions:
   checks: write
@@ -38,7 +43,7 @@ jobs:
         check_name: Test Results
     - name: Extract version
       id: version
-      run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+      run: echo "VERSION=${{ inputs.version || fromJson('{\"version\": \"1.0.0\"}').version }}" >> $GITHUB_OUTPUT
     - name: Create git tag
       run: |
         git config user.name "github-actions"
